--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,39 @@
+# asgiref==3.3.1
+# astroid==2.4.2
+# autopep8==1.5.4
+# certifi==2020.12.5
+# chardet==4.0.0
+# cloudinary==1.24.0
+# colorama==0.4.4
+# countries==0.2.0
+# Django==3.1.4
+# django-cloudinary-storage==0.3.0
+# django-countries==7.0
+# Django-Verify-Email==0.0.4
+# gunicorn==20.0.4
+# idna==2.10
+# isort==5.6.4
+# lazy-object-proxy==1.4.3
+# mccabe==0.6.1
+# pep8==1.7.1
+# Pillow==8.0.1
+# # psycopg2==2.8.6
+# pycodestyle==2.6.0
+# pylint==2.6.0
+# python-decouple==3.3
+# pytz==2020.4
+# requests==2.25.1
+# six==1.15.0
+# sqlparse==0.4.1
+# stripe==2.55.1
+# toml==0.10.2
+# urllib3==1.26.2
+# whitenoise==5.2.0
+# wrapt==1.12.1
+# itenoise==5.2.0
+# wrapt==1.12.1
+
+# new
 arabic-reshaper==2.1.3
 asgiref==3.3.1
 astroid==2.4.2
@@ -47,4 +83,3 @@ urllib3==1.26.2
 WeasyPrint==52.4
 webencodings==0.5.1
 whitenoise==5.2.0
-itenoise==5.2.0
